tests/diagnostics/wrong_type_arg_count.kal
# Option takes exactly one type argument; Option<i64, i64> is wrong.
fn f(x: Option<i64, i64>) -> i64 = 0;
